{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "e8bd3335-26e2-4b8d-9319-a2ea7d4d9d2b",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "b51e8b78-f02d-4b2e-baf6-ca10c9ae336f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2118b16c-a6bd-4848-9761-dcf2235c4014",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6e7402f-2ccc-44b9-9458-f6594f22e198",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ce1b6af-85e2-4f0e-9ba1-a129b8b9a80f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}